# python-api

./: README.md  pyproject.toml
.wex/: config.yml
.wex/ai/engrams/suite-PYTHON-performance/src/wexample_api/common/: abstract_gateway.py.engram.json
.wex/ai/engrams/suite-PYTHON-performance/src/wexample_api/demo/: demo_simple_gateway.py.engram.json
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_api/common/: abstract_gateway.py.engram.json  http_request_payload.py.engram.json
.wex/knowledge/dev/: rework.md
.wex/knowledge/readme/: introduction.md
.wex/python/app_manager/: requirements.txt
examples/common/: http_request_example.py
src/wexample_api/common/: abstract_gateway.py  http_request_payload.py
src/wexample_api/const/: http.py
src/wexample_api/demo/: demo_simple_gateway.py
src/wexample_api/errors/: gateway_authentication_error.py  gateway_connexion_error.py
src/wexample_helpers_api/common/: abstract_gateway.py  http_request_payload.py
src/wexample_helpers_api/demo/: demo_simple_gateway.py
tests/common/: test_http_request_payload.py
tests/demo/: test_demo_simple_gateway.py
